add handling 'select'

--- a/src/components/smart-form.component.html
+++ b/src/components/smart-form.component.html
@@ -1,8 +1,13 @@
 <form [formGroup]="smartForm" (ngSubmit)="callOnSubmit()">
   <div *ngFor="let input of inputs" class="form-group">
     <label [for]="input.name">{{ input.label }}</label>
-    <input [formControlName]="input.name" [name]="input.name" [id]="input.name" [type]="input.type" [placeholder]="input.placeholder || ''"
-      class="form-control">
+
+    <select *ngIf="input.type === 'select'" [formControlName]="input.name" class="form-control">
+      <option *ngFor="let i of input.data" [value]="i.value">{{ i.text }}</option>
+    </select>
+
+    <input *ngIf="input.type === 'text'" [formControlName]="input.name" [name]="input.name" [id]="input.name" [type]="input.type"
+      [placeholder]="input.placeholder || ''" class="form-control">
   </div>
   <button class="btn btn-primary" type="submit">{{ settings.buttons.submit.value }}</button>
 </form>
