--- a/demo/index.ejs
+++ b/demo/index.ejs
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-  
+
   <app-demo>
     <span class="loading">Loading...</span>
   </app-demo>
@@ -45,7 +45,19 @@
     crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
     crossorigin="anonymous"></script>
-  
+
+  <% if (htmlWebpackPlugin.options.googleAnalytics) { %>
+    <script type="text/javascript">
+      window.GoogleAnalyticsObject = 'ga'; window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+      <% if (htmlWebpackPlugin.options.googleAnalytics.trackingId) { %>
+        ga('create', '<%= htmlWebpackPlugin.options.googleAnalytics.trackingId %>', 'auto');
+      <% } else { throw new Error("html-webpack-template requires googleAnalytics.trackingId config"); } %>
+      <% if (htmlWebpackPlugin.options.googleAnalytics.pageViewOnLoad) { %>
+        ga('send', 'pageview')
+      <% } %>
+    </script>
+    <script async defer src="https://www.google-analytics.com/analytics.js" type="text/javascript"></script>
+  <% } %>
 </body>
 
 </html>
